[package]
name = "od"
version = "0.1.0"
edition = "2021"
license = "MIT"


[dependencies]
object = { version = "^0.28" }
anyhow = { version = "^1.0" }
tokio = { version = "^1.19", features = ["full"] }
log = { version = "^0.4" }
pretty_env_logger = { version = "^0.4" }
clap = { version = "^3.0", features = ["derive"] }
capstone = { version = "^0.10" }
msvc-demangler = { version = "^0.9" }
memchr = { version = "^2.4" }
rayon = { version = "^1.5" }